# opta

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml  coverage.yaml  main.yaml  publish.yaml  test.yaml
opta/: main.py
opta/algorithms/: abstract.py  abstract_algorithm.py  black_hole_optimization.py  explosion_search.py  flower_pollination_algorithm.py  particle_swarm_optimization.py  random_search.py
opta/tools/: coding.py  testing.py  vectors.py
tests/opta/algorithms/: test_black_hole_optimization.py  test_explosion_search.py  test_flower_pollination_algorithm.py  test_particle_swarm_optimization.py  test_random_search.py
tests/opta/tools/: test_bound_vector.py  test_coding.py  test_encoding.py  test_vector.py
