[tool.poetry]
name = "opta"
version = "0.7.0"
description = ""
authors = ["wol4aravio <panovskiy.v@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-rerunfailures = "^10.2"
pre-commit = "^2.19.0"
pylint = "^2.13.9"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
